fix z-index mobile

--- a/app/assets/stylesheets/main.css.sass
+++ b/app/assets/stylesheets/main.css.sass
@@ -128,7 +128,8 @@ nav
   height: 100%
   float: left
   width: 150px
-  background: rgba(222,77,83, 0.9)
+  background: #DE6060
+  z-index: 100
 
 #main
   margin-left: 150px
